# basic-kafka

./: Cargo.toml  README.adoc
src/: main.rs
