[package]
name = "rusty-messages"
version = "0.1.0"
authors = ["Anthony Ikeda <anthony.ikeda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.24", features = ["cmake-build"] }
futures = "0.3.0"
libc = "0.2.0"
log = "0.4.8"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.7.1"
hdrhistogram = "7.0.0"
rand = "0.3.15"
regex = "1.1.6"
smol = { version = "0.1.7" }
tokio = { version = "0.3", features = ["macros", "rt-multi-thread", "time"] }
