[package]
name = "rusty-messages"
version = "0.1.0"
authors = ["Anthony Ikeda <anthony.ikeda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.24", features = ["cmake-build"] }
tokio = { version = "0.2.0", features = ["full"] }